<resources>
    <string name="app_name">GDG_yhKim</string>
    <string name="action_seoul">Seoul</string>
    <string name="action_beijing">Beijing</string>
    <string name="action_chicago">Chicago</string>
    <string name="action_dubai">Dubai</string>
    <string name="action_london">london</string>
    <string name="navigation_subheader">navigation_subheader</string>
    <string name="navigation_sub_item_1">subitem1</string>
    <string name="navigation_sub_item_2">subitem2</string>
    <string name="search_hint">City name</string>
    <string name="refresh">Refresh data.</string>
    <string name="search_auto_hint">City name AutoComplete</string>

</resources>
